@@ -46,7 +46,6 @@ goto error_finish
 :: Check GRIDGAIN_HOME.
 :checkGridGainHome1
 if defined GRIDGAIN_HOME goto checkGridGainHome2
-    echo %0, WARN: GRIDGAIN_HOME environment variable is not found.
     pushd "%~dp0"/../..
     set GRIDGAIN_HOME=%CD%
     popd
@@ -66,8 +65,9 @@ goto checkGridGainHome2
 
 :checkGridGainHome3
 if exist "%GRIDGAIN_HOME%\config" goto checkGridGainHome4
-    echo %0, ERROR: GRIDGAIN_HOME environment variable is not valid installation home.
-    echo %0, ERROR: GRIDGAIN_HOME variable must point to GridGain installation folder.
+    echo %0, ERROR: GridGain installation folder is not found or GRIDGAIN_HOME environment variable is not valid.
+    echo Please create GRIDGAIN_HOME environment variable pointing to location of
+    echo GridGain installation folder.
     goto error_finish
 
 :checkGridGainHome4
@@ -90,8 +90,8 @@ set ANT_AUGMENTED_GGJAR=gridgain.jar
 :: Set GRIDGAIN_LIBS
 ::
 call "%GRIDGAIN_HOME%\os\bin\include\setenv.bat"
-
-set CP=%GRIDGAIN_LIBS%;%GRIDGAIN_HOME%\%ANT_AUGMENTED_GGJAR%
+call "%GRIDGAIN_HOME%\os\bin\include\target-classpath.bat"
+set CP=%GRIDGAIN_LIBS%
 
 ::
 :: Parse command line parameters.
@@ -102,11 +102,6 @@ if %ERRORLEVEL% neq 0 (
     echo Arguments parsing failed
     exit /b %ERRORLEVEL%
 )
-
-::
-:: Append hadoop libs to classpath after arguments are parsed.
-::
-set CP=%CP%;%GRIDGAIN_HOME%\libs\%HADOOP_LIB_DIR%\*
 
 ::
 :: Process 'restart'.
@@ -120,7 +115,9 @@ set RESTART_SUCCESS_OPT=-DGRIDGAIN_SUCCESS_FILE=%RESTART_SUCCESS_FILE%
 ::
 :: Find available port for JMX
 ::
-for /F "tokens=*" %%A in ('""%JAVA_HOME%\bin\java" -cp "%GRIDGAIN_HOME%\%ANT_AUGMENTED_GGJAR%" org.gridgain.grid.util.portscanner.GridJmxPortFinder"') do (
+:: You can specify GRIDGAIN_JMX_PORT environment variable for overriding automatically found JMX port
+::
+for /F "tokens=*" %%A in ('""%JAVA_HOME%\bin\java" -cp %CP% org.gridgain.grid.util.portscanner.GridJmxPortFinder"') do (
     set JMX_PORT=%%A
 )
 
@@ -145,7 +142,16 @@ if "%JMX_PORT%" == "" (
 ::
 :: ADD YOUR/CHANGE ADDITIONAL OPTIONS HERE
 ::
-if "%JVM_OPTS%" == "" set JVM_OPTS=-Xms1g -Xmx1g -server -XX:+AggressiveOpts
+set BASE_JVM_OPTS=-Xms1g -Xmx1g -server -XX:+AggressiveOpts
+
+if "%JVM_OPTS%" == "" (
+    :: Hadoop needs class unloading enabled and large size of perm space.
+    if defined GRIDGAIN_HADOOP_CLASSPATH (
+        set JVM_OPTS=%BASE_JVM_OPTS% -XX:MaxPermSize=350m -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSClassUnloadingEnabled -XX:+ParallelRefProcEnabled -XX:+ExplicitGCInvokesConcurrentAndUnloadsClasses
+    ) else (
+        set JVM_OPTS=%BASE_JVM_OPTS%
+    )
+)
 
 ::
 :: Uncomment the following GC settings if you see spikes in your throughput due to Garbage Collection.
@@ -190,11 +196,11 @@ if "%MAIN_CLASS%" == "" set MAIN_CLASS=org.gridgain.grid.startup.cmdline.GridCom
 ::
 
 if "%INTERACTIVE%" == "1" (
-    "%JAVA_HOME%\bin\java.exe" %JVM_OPTS% %QUIET% %RESTART_SUCCESS_OPT% %JMX_MON% -DGRIDGAIN_SCRIPT ^
+    "%JAVA_HOME%\bin\java.exe" %JVM_OPTS% %QUIET% %RESTART_SUCCESS_OPT% %JMX_MON% ^
     -DGRIDGAIN_UPDATE_NOTIFIER=false -DGRIDGAIN_HOME="%GRIDGAIN_HOME%" -DGRIDGAIN_PROG_NAME="%PROG_NAME%" %JVM_XOPTS% ^
     -cp "%CP%" %MAIN_CLASS%
 ) else (
-    "%JAVA_HOME%\bin\java.exe" %JVM_OPTS% %QUIET% %RESTART_SUCCESS_OPT% %JMX_MON% -DGRIDGAIN_SCRIPT ^
+    "%JAVA_HOME%\bin\java.exe" %JVM_OPTS% %QUIET% %RESTART_SUCCESS_OPT% %JMX_MON% ^
     -DGRIDGAIN_UPDATE_NOTIFIER=false -DGRIDGAIN_HOME="%GRIDGAIN_HOME%" -DGRIDGAIN_PROG_NAME="%PROG_NAME%" %JVM_XOPTS% ^
     -cp "%CP%" %MAIN_CLASS% "%CONFIG%"
 )
